# libzapojit

./: ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  libzapojit.doap  zapojit-0.0.pc.in
docs/reference/: Makefile.am  libzapojit-0.0-docs.sgml
src/: Makefile.am  zpj-authorization-domain.c  zpj-authorization-domain.h  zpj-authorizer.c  zpj-authorizer.h  zpj-error.c  zpj-error.h  zpj-goa-authorizer.c  zpj-goa-authorizer.h  zpj-skydrive-entry.c  zpj-skydrive-entry.h  zpj-skydrive-file.c  zpj-skydrive-file.h  zpj-skydrive-folder.c  zpj-skydrive-folder.h  zpj-skydrive-photo.c  zpj-skydrive-photo.h  zpj-skydrive-video.c  zpj-skydrive-video.h  zpj-skydrive.c  zpj-skydrive.h  zpj.h
